<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PhotoPano</string>
    <string name="settings">Настройки</string>
    <string name="start">Начать</string>
    <string name="motivation_text">мотивирующий текст мотивирующий \nтекст мотивирующий текст \nмотивирующий текст мотивирующий\nтекст </string>
    <string name="back">Назад</string>
    <string name="camera_order">Порядок камер</string>
    <string name="show_camera_parameters">Показывать параметры камер</string>
    <string name="parameters_hidden">Параметры скрыты</string>
    <string name="parameters_visible">Параметры видны</string>
    <string name="parameters">Параметры</string>
    <string name="it_will_look_like_this">Это будет выглядеть так</string>
    <string name="done">Готово</string>
    <string name="duration">Длительность:</string>
    <string name="seconds_shorten">с</string>
    <string name="seconds_shorten_interval">с,   интервал:</string>
    <string name="seconds">секунд</string>
    <string name="rtuitlab_2024">RTUITLab 2025</string>
    <string name="you_have">У Вас будет</string>
    <string name="to_get_on_the_podium">чтобы встать на подиум</string>
    <string name="cancel">Отмена</string>
    <string name="preparation">Подготовка</string>
    <string name="processing_result" tools:ignore="TypographyEllipsis">Обработка результата...</string>
    <string name="shooting">Съёмка..</string>
    <string name="send_by_mail">Отправить по почте</string>
    <string name="to_homepage">На главную</string>
    <string name="reshoot">Переснять</string>
    <string name="animation_done">Анимация готова!</string>
    <string name="we_will_send_result_on_it">На неё мы отправим результат.</string>
    <string name="enter_mail">Введите почту</string>
    <string name="e_mail">E-mail</string>
    <string name="compliments">Очень стильно.\nТакой элегант.\nПрекрасная улыбка.\nБезупречный стиль.\nБомба, конфетка!\nНевероятно мило.\nЧарующая улыбка)\nИдеальный образ.\nВот это харизма.\nВеликолепный взгляд.\nПрекрасно смотрится.\nКрасота!\nОчень необыкновенно)\nУлыбка радует.</string>
    <string name="click_to_rescan">Нажмите, чтобы заново просканировать камеры, подключенные к устройству</string>
    <string name="find_cameras">Найти камеры</string>
    <string name="done_error">Произошла ошибка 🫥</string>
    <string name="conversion">Преобразование изображений</string>
    <string name="watermark_adding">Добавление вотермарок</string>
    <string name="animation_creation">Создание анимации</string>
    <string name="press_and_hold_to_move">Нажмите и удерживайте, чтобы переместить</string>
    <string name="camera">Камера</string>
    <string name="format">Формат</string>
    <string name="rotation">Поворот</string>
    <string name="pack">Пачка</string>
    <string name="uploading">Загрузка..</string>
    <string name="adding_reverse_frames">Создание обратной анимации</string>
    <string name="need_storage_permission">Для этого действия требуется разрешение на доступ к хранилищу</string>
    <string name="wrong_mail">Введена некорректная почта</string>
    <string name="interpolate">Интерполировать</string>
    <string name="preparing">Подготовка</string>
    <string name="saving_images">Сохранение изображений</string>
    <string name="combining_images">Объединение изображений</string>
    <string name="creating_palette">Генерация цветовой палитры</string>
    <string name="interpolation">Интерполяция кадров</string>
    <string name="convert_to_gif">Преобразование</string>
    <string name="reverse_animation">Создание обратной анимации</string>
    <string name="reverse">Обратная анимация</string>
    <string name="packs">Пачки</string>
    <string name="upload_to_cloud">Загрузить в облако</string>
    <string name="well_errors">Чтож, будут ошибки..</string>
    <string name="download">Загрузить</string>
    <string name="your_gif">Ваша гифка</string>
    <string name="onboarding_next">Далее</string>
    <string name="onboarding_back">Назад</string>
    <string name="onboarding_done">Готово</string>
    <string name="onboarding_skip">Пропустить</string>
    <string name="onboarding_title_1">Обучение PhotoPano!</string>
    <string name="onboarding_message_1">Мы поможем вам сделать памятную гифку Вашего мероприятия</string>
    <string name="onboarding_title_2">Подготовка</string>
    <string name="onboarding_message_2">Для лучшего результата вам необходимо подключить побольше камер к устройству и расположить их в форме полукруга смотрящими на одну точку</string>
    <string name="onboarding_title_3">Страница настроек</string>
    <string name="onboarding_message_3">В настройках можно изменить порядок камер, сохранить его, а также настроить параллельную подготовку камер (пачки)</string>
    <string name="onboarding_title_4">Страница параметров съемки</string>
    <string name="onboarding_message_4">Настройте параметры как вам нравится и начните съемку!</string>
    <string name="onboarding_title_5">Страница результата</string>
    <string name="onboarding_message_5">Вы можете сохранить получившуюся гифку или попробовать снова</string>
</resources>
