<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="?colorOnSecondary"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/top_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/you_have"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/seconds_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:translationY="-8dp">

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textColor="?colorTertiary"
            android:textSize="36sp"
            android:textStyle="bold"
            android:transitionName="counter"
            tools:text="5" />

        <TextView
            android:id="@+id/seconds_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/seconds"
            android:textColor="?colorTertiary"
            android:textSize="36sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/bottom_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/to_get_on_the_podium"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:translationY="-8dp" />

    <LinearLayout
        android:id="@+id/button_panel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:backgroundTint="@color/white_alpha_005"
            android:elegantTextHeight="true"
            android:fontFamily="@font/raleway_semibold"
            android:paddingHorizontal="16dp"
            android:text="@string/cancel"
            android:textColor="?colorOnBackground"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_close"
            app:iconTint="?colorOnBackground"
            app:rippleColor="?colorOnError" />

        <Button
            android:id="@+id/start"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:backgroundTint="?colorTertiaryContainer"
            android:elegantTextHeight="true"
            android:fontFamily="@font/raleway_semibold"
            android:paddingHorizontal="16dp"
            android:text="@string/start"
            android:textColor="?colorOnBackground"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_camera"
            app:iconTint="?colorOnBackground"
            app:rippleColor="?colorOnTertiary" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/shooting_root"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/shooting_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_semibold"
            android:text="@string/shooting"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@id/shooting_progress"
            app:layout_constraintEnd_toStartOf="@id/shooting_progress_text"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shooting_progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="6dp"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/shooting_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/shooting_text" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/shooting_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="0"
            app:indicatorColor="?colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shooting_text"
            app:trackColor="?colorPrimaryContainer"
            app:trackCornerRadius="4dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
