<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parameters_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/app_bar"
            style="?materialCardViewFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white_alpha_005"
            app:cardCornerRadius="16dp"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/back"
                    android:padding="4dp"
                    app:srcCompat="@drawable/ic_back"
                    app:tint="?colorOnBackground" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/raleway_regular"
                    android:paddingBottom="4dp"
                    android:text="@string/parameters"
                    android:textColor="?colorOnBackground"
                    android:textSize="24sp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/options_root"
            style="?materialCardViewFilledStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:cardBackgroundColor="@color/white_alpha_005"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toStartOf="@id/preview_root"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingVertical="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="@font/raleway_medium"
                        android:text="@string/duration"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/duration_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="2dp"
                        android:textColor="?colorTertiary"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        tools:text="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/raleway_medium"
                        android:text="@string/seconds_shorten_interval"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/interval_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="2dp"
                        android:textColor="?colorTertiary"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        tools:text="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/raleway_medium"
                        android:text="@string/seconds_shorten"
                        android:textSize="14sp" />
                </LinearLayout>

                <com.google.android.material.slider.Slider
                    android:id="@+id/duration_slider"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="8dp"
                    android:stepSize="1"
                    android:value="2"
                    android:valueFrom="1"
                    android:valueTo="12"
                    app:thumbRadius="8dp"
                    app:tickRadiusActive="1.5dp"
                    app:tickRadiusInactive="1.5dp"
                    app:trackHeight="8dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="@font/raleway_medium"
                        android:text="@string/preparation"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/preparation_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="2dp"
                        android:textColor="?colorTertiary"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        tools:text="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/raleway_medium"
                        android:text="@string/seconds_shorten"
                        android:textSize="14sp" />
                </LinearLayout>

                <com.google.android.material.slider.Slider
                    android:id="@+id/preparation_slider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:stepSize="1"
                    android:valueFrom="1"
                    android:valueTo="10"
                    app:thumbRadius="8dp"
                    app:tickRadiusActive="1.5dp"
                    app:tickRadiusInactive="1.5dp"
                    app:trackHeight="8dp" />

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/interpolate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/raleway_regular"
                    android:text="@string/interpolate"
                    android:textSize="14sp" />

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/reverse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:checked="true"
                    android:fontFamily="@font/raleway_regular"
                    android:text="@string/reverse"
                    android:textSize="14sp" />

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/upload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:checked="true"
                    android:fontFamily="@font/raleway_regular"
                    android:text="@string/upload_to_cloud"
                    android:textSize="14sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/preview_root"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/options_root"
            app:layout_constraintTop_toTopOf="@id/options_root">

            <androidx.cardview.widget.CardView
                style="?materialCardViewFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="16dp">

                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/sample_gif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="?materialCardViewFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white_alpha_005"
                app:cardCornerRadius="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/preview_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:paddingEnd="16dp"
                        android:text="@string/it_will_look_like_this"
                        android:textSize="11sp" />

                    <ImageView
                        android:layout_width="14dp"
                        android:layout_height="14dp"
                        android:layout_alignEnd="@id/preview_hint"
                        android:layout_centerVertical="true"
                        android:rotation="-90"
                        app:srcCompat="@drawable/ic_arrow_up_right"
                        app:tint="?colorOnBackground" />


                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <Button
            android:id="@+id/done"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:backgroundTint="?colorTertiaryContainer"
            android:elegantTextHeight="true"
            android:fontFamily="@font/raleway_semibold"
            android:paddingStart="18dp"
            android:paddingEnd="16dp"
            android:text="@string/done"
            android:textColor="?colorOnBackground"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_done"
            app:iconTint="?colorOnBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/options_root"
            app:rippleColor="?colorOnTertiary" />

        <View
            android:id="@+id/flashes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>