<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/settings"
        style="?attr/materialIconButtonStyle"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/settings"
        app:icon="@drawable/ic_settings"
        app:iconSize="28dp"
        app:iconTint="?colorOnBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/photopano" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_regular"
            android:text="@string/app_name"
            android:textColor="?colorOnBackground"
            android:textSize="56sp" />
    </LinearLayout>

    <Button
        android:id="@+id/start"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textColor="?colorOnBackground"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name"
        app:strokeColor="?colorOnBackground"
        app:strokeWidth="2dp" />

    <View
        android:layout_width="400dp"
        android:layout_height="350dp"
        android:alpha="0.3"
        android:background="@drawable/grid"
        android:rotation="-30"
        android:translationX="-120dp"
        android:translationY="-230dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/motivation_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:alpha="0.6"
        android:text="@string/motivation_text"
        android:textColor="?colorSecondary"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/rtuitlab"
            app:tint="?colorSecondaryContainer" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rtuitlab_2024"
            android:textColor="?colorSecondaryContainer"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <View
        android:id="@+id/circle_s3"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/dotted_circle_s3"
        android:translationX="50dp"
        android:translationY="125dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/circle_s2"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:background="@drawable/dotted_circle_s2"
        android:translationX="60dp"
        android:translationY="125dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/circle_s1"
        android:layout_width="325dp"
        android:layout_height="325dp"
        android:background="@drawable/dotted_circle_s1"
        android:translationX="90dp"
        android:translationY="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
